<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Cdf-8m-1RW">
    <device id="retina6_12" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="SeSACInApp" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zJM-Pp-e0o">
                                <rect key="frame" x="155" y="408.66666666666669" width="83" height="35"/>
                                <color key="backgroundColor" systemColor="systemCyanColor"/>
                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="구매하기"/>
                                <connections>
                                    <action selector="btn_buy:" destination="BYZ-38-t0r" eventType="touchUpInside" id="5En-xH-AMW"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <constraints>
                            <constraint firstItem="zJM-Pp-e0o" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Nkw-6T-vse"/>
                            <constraint firstItem="zJM-Pp-e0o" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="O8j-I2-CRE"/>
                        </constraints>
                    </view>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="132" y="-27"/>
        </scene>
        <!--Login View Controller-->
        <scene sceneID="j02-oU-cn0">
            <objects>
                <viewController storyboardIdentifier="LoginViewController" id="Cdf-8m-1RW" customClass="LoginViewController" customModule="SeSACInApp" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="qL2-2l-jPC">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gtV-qi-Hf0">
                                <rect key="frame" x="16" y="129" width="361" height="50"/>
                                <color key="backgroundColor" systemColor="systemIndigoColor"/>
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="emailTextField"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="Dr6-lC-71C"/>
                                </constraints>
                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Oas-99-g9X">
                                <rect key="frame" x="16" y="195" width="361" height="50"/>
                                <color key="backgroundColor" systemColor="systemIndigoColor"/>
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="PasswordTextField"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="Swz-SP-CW6"/>
                                </constraints>
                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="czI-qU-sUK">
                                <rect key="frame" x="16" y="261" width="361" height="50"/>
                                <color key="backgroundColor" systemColor="systemIndigoColor"/>
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="checkTextField"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="HUu-fk-kiQ"/>
                                </constraints>
                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sc8-E2-HyM">
                                <rect key="frame" x="16" y="327" width="361" height="50"/>
                                <color key="backgroundColor" systemColor="systemIndigoColor"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="ElY-7j-IlO"/>
                                </constraints>
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="로그인하기"/>
                                <connections>
                                    <action selector="loginButtonClicked:" destination="Cdf-8m-1RW" eventType="touchUpInside" id="C1W-Mw-lXS"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RZo-ln-KXQ">
                                <rect key="frame" x="16" y="427" width="361" height="70"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="70" id="bro-Dv-BOb"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="tdC-Sp-3Tu"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <constraints>
                            <constraint firstItem="tdC-Sp-3Tu" firstAttribute="trailing" secondItem="Sc8-E2-HyM" secondAttribute="trailing" constant="16" id="2l2-5W-1GN"/>
                            <constraint firstItem="gtV-qi-Hf0" firstAttribute="leading" secondItem="tdC-Sp-3Tu" secondAttribute="leading" constant="16" id="6Yf-W6-Vk9"/>
                            <constraint firstItem="tdC-Sp-3Tu" firstAttribute="trailing" secondItem="RZo-ln-KXQ" secondAttribute="trailing" constant="16" id="9B2-nE-vDo"/>
                            <constraint firstItem="Oas-99-g9X" firstAttribute="leading" secondItem="tdC-Sp-3Tu" secondAttribute="leading" constant="16" id="AwG-wm-hPp"/>
                            <constraint firstItem="Sc8-E2-HyM" firstAttribute="leading" secondItem="tdC-Sp-3Tu" secondAttribute="leading" constant="16" id="B3V-Tc-GSM"/>
                            <constraint firstItem="czI-qU-sUK" firstAttribute="leading" secondItem="tdC-Sp-3Tu" secondAttribute="leading" constant="16" id="IFX-CK-ZKy"/>
                            <constraint firstItem="tdC-Sp-3Tu" firstAttribute="trailing" secondItem="czI-qU-sUK" secondAttribute="trailing" constant="16" id="RXF-g5-w6b"/>
                            <constraint firstItem="RZo-ln-KXQ" firstAttribute="leading" secondItem="tdC-Sp-3Tu" secondAttribute="leading" constant="16" id="Sxi-S9-MRX"/>
                            <constraint firstItem="Sc8-E2-HyM" firstAttribute="top" secondItem="czI-qU-sUK" secondAttribute="bottom" constant="16" id="Tdw-ME-NdT"/>
                            <constraint firstItem="Oas-99-g9X" firstAttribute="top" secondItem="gtV-qi-Hf0" secondAttribute="bottom" constant="16" id="bOb-3t-Nmn"/>
                            <constraint firstItem="tdC-Sp-3Tu" firstAttribute="trailing" secondItem="gtV-qi-Hf0" secondAttribute="trailing" constant="16" id="dtt-ue-4Es"/>
                            <constraint firstItem="czI-qU-sUK" firstAttribute="top" secondItem="Oas-99-g9X" secondAttribute="bottom" constant="16" id="eE8-kT-2bZ"/>
                            <constraint firstItem="RZo-ln-KXQ" firstAttribute="top" secondItem="Sc8-E2-HyM" secondAttribute="bottom" constant="50" id="oLK-m6-Q1F"/>
                            <constraint firstItem="tdC-Sp-3Tu" firstAttribute="trailing" secondItem="Oas-99-g9X" secondAttribute="trailing" constant="16" id="pZa-us-Ewd"/>
                            <constraint firstItem="gtV-qi-Hf0" firstAttribute="top" secondItem="tdC-Sp-3Tu" secondAttribute="top" constant="70" id="w38-pC-BpX"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="descriptionlabel" destination="RZo-ln-KXQ" id="mut-Zu-JNg"/>
                        <outlet property="tf_check" destination="czI-qU-sUK" id="BYh-60-Vnl"/>
                        <outlet property="tf_email" destination="gtV-qi-Hf0" id="mrN-bQ-I6y"/>
                        <outlet property="tf_password" destination="Oas-99-g9X" id="p04-qS-0or"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Dko-WZ-U8o" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="895" y="-27"/>
        </scene>
    </scenes>
    <resources>
        <systemColor name="systemBackgroundColor">
            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
        </systemColor>
        <systemColor name="systemCyanColor">
            <color red="0.19607843137254902" green="0.67843137254901964" blue="0.90196078431372551" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </systemColor>
        <systemColor name="systemIndigoColor">
            <color red="0.34509803921568627" green="0.33725490196078434" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </systemColor>
    </resources>
</document>
